--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "options_page": "options.html",
   "background": {
     "scripts": ["background.js"],
-    "persistent": false
+    "persistent": true
   },
   "page_action": {
     "default_popup": "popup.html",
